--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -4,5 +4,9 @@ $color-text-alt: #F2F2F2
 $color-background: #000000
 $color-background-alt: #222222
 
+$body-font-family: "Poppins", sans-serif
+$heading-font-family: $body-font-family
+
 $header-logo-height: 60px
 $header-logo-height-desktop: 100px
+$header-border-bottom-width: 0
