--- a/assets/sass/_fonts.sass
+++ b/assets/sass/_fonts.sass
@@ -1,1 +1,4 @@
-// @include font-face("Font name", font-file-in-fonts-without-extensions)
+@include font-face("Poppins", poppins-v22-latin-regular)
+@include font-face("Poppins", poppins-v22-latin-700, $weight: bold)
+@include font-face("Poppins", poppins-v22-latin-italic, $style: italic)
+@include font-face("Poppins", poppins-v22-latin-700italic, $weight: bold, $style: italic)
