--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -10,3 +10,4 @@ $heading-font-family: $body-font-family
 $header-logo-height: 60px
 $header-logo-height-desktop: 100px
 $header-border-bottom-width: 0
+$header-background: none
