--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -1,3 +1,7 @@
 .hero
     background-image: url(/assets/images/background.png)
     background-size: cover
+
+.footer
+    background-image: url(/assets/images/background.png)
+    background-size: cover
