--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -11,6 +11,10 @@ $header-logo-height: 60px
 $header-logo-height-desktop: 100px
 $header-border-bottom-width: 0
 $header-background: none
+$heading-weight: bold !default
+
+$footer-logo-height: 100px !default
+$footer-logo-height-desktop: $footer-logo-height !default
 
 
 
