--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -1,6 +1,7 @@
 .hero
     background-image: url(/assets/images/background.png)
     background-size: cover
+    font-size: 24px
 
 .footer
     background-image: url(/assets/images/background.png)
