--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -3,6 +3,11 @@
     background-size: cover
     font-size: 24px
 
-.footer
+footer#document-footer
     background-image: url(/assets/images/background.png)
     background-size: cover
+
+.blocks
+    .block:first-child 
+        margin-top: 0;
+        background-color: $color-background
